added about us section

--- a/index.html
+++ b/index.html
@@ -6,5 +6,16 @@
 	<body>
 		<h1>Welcome to my Octopus App</h1>
 		<p></p>
+		<!-- This is a section for companies -->
+		<section>
+			<div>
+				<h1></h1>
+			</div>
+			<div>
+				<p></p>
+			</div>
+		</section>
+		<section></section>
+		<section></section>
 	</body>
 </html>
