--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 	<body>
 		<h1>Welcome to my Octopus App</h1>
 		<p></p>
+		<Section></Section>
+		<Section>This is a section 2</Section>
+		<Section>Reviewtostaging</Section>
 	</body>
 </html>
