--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html>
 	<head>
 		<title></title>
@@ -7,7 +7,7 @@
 		<h1>Welcome to my Octopus App</h1>
 		<p></p>
 		<Section></Section>
-		<Section>This is a section 2</Section>
+		<Section>This is a sec	 VMion 2</Section>
 		<Section>Reviewtostaging</Section>
 	</body>
 </html>
