--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<h1>Welcome to my Octopus App</h1>
 		<p></p>
 		<Section></Section>
-		<Section>This is a sec	 VMion 2</Section>
+		<Section>Changes</Section>
 		<Section>Reviewtostaging</Section>
 	</body>
 </html>
