--- a/Elements.html
+++ b/Elements.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>W3 School</title>
-  <link rel="stylesheet" href="style/style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>W3 School</title>
+	<link rel="stylesheet" href="style/style.css">
 </head>
-<body>
-  <h1>My First Heading&lt;h1&gt; Tag</h1>
-  <p>My first paragraph.&lt;p&gt; Tag</p>
-  This is a <br> paragraph with a line break. &lt;br&gt; Tag</p>
-  <a href="https://www.w3schools.com">This is a link</a>Href Attribute
-  <img class="no-size" src="./WIN_20240322_16_29_29_Pro.jpg">Src Attribute
-  <img src="./WIN_20240322_16_29_29_Pro.jpg" width="500" height="600">Height and Width Attribute
-  <img class="no-size" src="./WIN_20240322_16_29_29_Pro.jpg" alt="Man in an office">Alt Attribute
-  <p style="color:red">This is a red paragraph.</p>Style Attribute: Colour: Red
-  <p title="I'm a tooltip">This is a paragraph.</p>Title Attributes
+<body style="background-color:powderblue;">
+	<h1>My First Heading&lt;h1&gt; Tag</h1>
+	<p>My first paragraph.&lt;p&gt; Tag</p>
+	<p>This is a <br> paragraph with a line break. &lt;br&gt; Tag</p>
+	<a href="https://www.w3schools.com">This is a link</a>Href Attribute
+	<img class="no-size" src="./WIN_20240322_16_29_29_Pro.jpg">Src Attribute
+	<img src="./WIN_20240322_16_29_29_Pro.jpg" width="500" height="600">Height and Width Attribute
+	<img class="no-size" src="./WIN_20240322_16_29_29_Pro.jpg" alt="Man in an office">Alt Attribute
+	<p>This is a red paragraph.</p>Style Attribute: Colour: Red
+	<p title="I'm a tooltip">This is a paragraph.</p>Title Attributes
+	<h1>This is heading 1</h1>
+	<p>This is some text.</p>
+	<hr>
+	<h2>This is heading 2</h2>
+	<p>This is some other text.</p>
+	<hr>
 </body>
 </html>
