--- a/W3 School/Images.html
+++ b/W3 School/Images.html
@@ -4,20 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Image Formats</title>
+  <link rel="shortcut icon" href="../Face.jpg" type="image/x-icon">
   <link rel="stylesheet" href="../Style/style.css">
 </head>
 <body>
-  <img style="width: 1350px;" src="../WIN_20240322_16_29_29_Pro (2).jpg" alt="Images"><br>
-  <img style="float: left;" src="../WIN_20240322_16_29_29_Pro (2).jpg" alt="Images">
-  <img style="float: right;" src="../WIN_20240322_16_29_29_Pro (2).jpg" alt="Images">
+  <img style="width: 1340px;" src="../Man.jpg" alt="Images"><br>
+  <img style="float: left;" src="../Man.jpg" alt="Images">
+  <img style="float: right;" src="../Man.jpg" alt="Images">
   <br><p style="float: left;">Float-Left</p><p style="float: right;">Float-Right</p>
   <h2>Image Maps</h2>
-  <img src="../WIN_20240322_16_29_29_Pro (2).jpg" alt="Workplace" usemap="#pp" id="">
+  <img src="../Man.jpg" alt="Workplace" usemap="#pp" id="pp">
 
   <map name="pp">
-    <area shape="rect" coords="34,44,270,350" alt="Computer" href="computer.html">
-    <area shape="rect" coords="290,172,333,250" alt="Phone" href="phone.html">
-    <area shape="circle" coords="337,300,44" alt="Cup of coffee" href="coffee.html">
+    <area shape="rect" coords="0,90,295,203" alt="Face" href="../Face.jpg">
+    <area shape="rect" coords="290,172,333,250" alt="Phone" href="../Body.jpg">
   </map>
 </body>
 </html>
