--- a/W3 School/Images.html
+++ b/W3 School/Images.html
@@ -13,11 +13,11 @@
   <img style="float: right;" src="../Man.jpg" alt="Images">
   <br><p style="float: left;">Float-Left</p><p style="float: right;">Float-Right</p>
   <h2>Image Maps</h2>
-  <img src="../Man.jpg" alt="Workplace" usemap="#pp" id="pp">
+  <img src="../Man.jpg" alt="Supposed to be a person" usemap="#pp" id="pp">
 
   <map name="pp">
-    <area shape="rect" coords="0,90,295,203" alt="Face" href="../Face.jpg">
-    <area shape="rect" coords="290,172,333,250" alt="Phone" href="../Body.jpg">
+    <area shape="rect" coords="240,0,770,703" alt="Face" href="../Face.jpg">
+    <area shape="rect" coords="0,645,1343,1343" alt="Phone" href="../Body.jpg">
   </map>
 </body>
 </html>
