--- a/W3 School/List.html
+++ b/W3 School/List.html
@@ -4,19 +4,87 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>HTMl Lists</title>
+	<link rel="stylesheet" href="../Style/style.css">
 </head>
 <body>
-	<h2>An Unordered HTML List</h2>
+	<h1>An Unordered HTML List</h1>
 	<ul>
 		<li>Coffee</li>
 		<li>Tea</li>
 		<li>Milk</li>
 	</ul>
-	<h2>An Ordered HTML List</h2>
-	<ol>
+	<h2>Circle &lt;ul&gt; List Style Type</h2>
+	<ul style="list-style-type: circle;">
 		<li>Coffee</li>
 		<li>Tea</li>
 		<li>Milk</li>
-	</ol> 
+	</ul>
+	<h2>Square &lt;ul&gt; List Style Type</h2>
+	<ul style="list-style-type: square;">
+		<li>Coffee</li>
+		<li>Tea</li>
+		<li>Milk</li>
+	</ul>
+	<h2>No &lt;ul&gt; List Style Type</h2>
+	<ul style="list-style-type: none;">
+		<li>Coffee</li>
+		<li>Tea</li>
+		<li>Milk</li>
+	</ul>
+	<h1>Ordered &lt;ol&gt; Lists</h1>
+	<h2>Numbered Lists</h2>
+	<ol start="13" type="1">
+		<li>Coffee</li>
+		<li>Tea</li>
+		<li>Milk</li>
+	</ol>
+	<h2>Upper Cased Lists</h2>
+	<ol start="16" type="A">
+		<li>Coffee</li>
+		<li>Tea</li>
+		<li>Milk</li>
+	</ol>
+	<h2>Lower Cased Lists</h2>
+	<ol start="19" type="a">
+		<li>Coffee</li>
+		<li>Tea</li>
+		<li>Milk</li>
+	</ol>
+	<h2>Lower Cased Roman Numbered Lists</h2>
+	<ol start="22" type="I">
+		<li>Coffee</li>
+		<li>Tea</li>
+		<li>Milk</li>
+	</ol>
+	<h2>Lowercase Roman Numbered Lists</h2>
+	<ol start="25" type="i">
+		<li>Coffee</li>
+		<li>Tea</li>
+		<li>Milk</li>
+	</ol>
+	<h1>Control List Counting</h1>
+	<ol type="A" start="28">
+		<li>Coffee</li>
+		<li>Tea</li>
+		<li>Milk</li>
+	</ol>
+	<h1>Deatailed Lists</h1>
+	<dl>
+		<dt>Coffee<dd> - </dt>black hot drink</dd>
+		<dt>Milk <dd>-</dt> white cold drink</dd>
+	</dl>
+	<h1>Horzontal Lists</h1>
+	<span class="hrzntl-lne">
+		<ol type="I" start="31">
+			<li>Coffee</li>
+			<li>Tea</li>
+			<li>Milk</li>
+		</ol>
+		<ul>
+			<li>Coffee</li>
+			<li>Tea</li>
+			<li>Milk</li>
+		</ul>
+	</span>
 </body>
 </html>
