--- a/W3 School/Bookmark.html
+++ b/W3 School/Bookmark.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ID Bookmarks</title>
-  <link rel="stylesheet" href="../Style/style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>ID Bookmarks</title>
+	<link rel="stylesheet" href="../Style/style.css">
+	<link rel="shortcut icon" href="../Face.jpg" type="image/x-icon">
 </head>
 <body>
-  <a href="https://www.bing.com/search?q=how+to+add+a+file+from+to+1+repository+to+another&FORM=AWRE&showconv=0#slideexp3_FA246Bchevrons_prevbtn" class="comment">This Will Take you to a stack Overflow Scetion on Bing</a>
+	<a href="https://www.bing.com/search?q=how+to+add+a+file+from+to+1+repository+to+another&FORM=AWRE&showconv=0#slideexp3_FA246Bchevrons_prevbtn" class="comment">This Will Take you to a stack Overflow Scetion on Bing</a>
 </body>
 </html>
