--- a/W3 School/Elements.html
+++ b/W3 School/Elements.html
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>W3 School</title>
-	<link rel="stylesheet" href="style/style.css">
+	<link rel="stylesheet" href="../Style/style.css">
+	<link rel="shortcut icon" href="../Face.jpg" type="image/x-icon">
 </head>
 <body style="background-color:powderblue;">
 	<h1>My First Heading&lt;h1&gt; Tag</h1>
