--- a/W3 School/List.html
+++ b/W3 School/List.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>HTMl Lists</title>
 	<link rel="stylesheet" href="../Style/style.css">
+	<link rel="shortcut icon" href="../Face.jpg" type="image/x-icon">
 </head>
 <body>
 	<h1>An Unordered HTML List</h1>
