--- a/Index.html
+++ b/Index.html
@@ -1,30 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Links</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="Style/style.css">
+	<link rel="shortcut icon" href="../Face.jpg" type="image/x-icon">
+	<title>Links</title>
 </head>
 <body>
-  <a href=""></a>
-  <a href=""></a>
-  <a href=""></a>
-  <a href=""></a>
-  <a href=""></a>
-  <a href=""></a>
-  <a href=""></a>
-  <a href=""></a>
-  <a href=""></a>
-  <a href=""></a>
-  <a href=""></a>
-  <a href=""></a>
-  <a href=""></a>
-  <a href=""></a>
-  <a href=""></a>
-  <a href=""></a>
-  <a href=""></a>
-  <a href=""></a>
-  <a href=""></a>
-  <a href=""></a>
+	<canvas id="clock" width="550" height="550"></canvas>
+	<table>
+		<tr>
+			<th><a href="W3 School/Bookmark.html">HTML Bookmarks</a></th>
+			<th><a href="W3 School/Elements.html">Some HTML Elements</a></th>
+		</tr>
+		<tr>
+			<th><a href="W3 School/Formatting.html">HTML Formatting</a></th>
+			<th><a href="W3 School/Home.html">HTML Basics</a></th>
+		</tr>
+		<tr>
+			<th><a href="W3 School/Iframe.html">HTML Iframe</a></a></th>
+			<th><a href="W3 School/Images.html">HTML Images</a></a></th>
+		</tr>
+		<tr>
+			<th><a href="W3 School/List.html">HTML List</a></a></th>
+			<th><a href="W3 School/Paragraph.html">HTML Paragraphing</a></a></th>
+		</tr>
+		<tr>
+			<th><a href="W3 School/Quotation.html">HTML Quoting</a></a></th>
+			<th><a href="W3 School/Tables.html">HTML Tabulation</a></a></th>
+		</tr>
+		<tr>
+			<th><a href="W3 School/">HTML</a></a></th>
+			<th><a href="W3 School/">HTML</a></a></th>
+		</tr>
+		<tr>
+			<th><a href="W3 School/">HTML</a></a></th>
+			<th><a href="W3 School/">HTML</a></a></th>
+		</tr>
+		<tr>
+			<th><a href="W3 School/">HTML</a></a></th>
+			<th><a href="W3 School/">HTML</a></a></th>
+		</tr>
+		<tr>
+			<th><a href="W3 School/">HTML</a></a></th>
+			<th><a href="W3 School/">HTML</a></a></th>
+		</tr>
+		<tr>
+			<th><a href="W3 School/">HTML</a></a></th>
+			<th><a href="W3 School/">HTML</a></a></th>
+		</tr>
+	</table>
+	<script>
+		var clock = document.getElementById("clock");
+		var ctx = clock.getContext("2d");
+		var radius = clock.height / 2;
+		ctx.translate(radius, radius);
+		radius = radius * 0.90
+		setInterval(drawClock, 1000);
+		
+		function drawClock() {
+			drawFace(ctx, radius);
+			drawNumbers(ctx, radius);
+			drawTime(ctx, radius);
+		}
+		
+		function drawFace(ctx, radius) {
+			var grad;
+			ctx.beginPath();
+			ctx.arc(0, 0, radius, 0, 2*Math.PI);
+			ctx.fillStyle = 'navajowhite';
+			ctx.fill();
+			grad = ctx.createRadialGradient(0,0,radius*0.95, 0,0,radius*1.05);
+			grad.addColorStop(0, 'deepskyblue');
+			grad.addColorStop(0.5, 'mediumspringgreen');
+			grad.addColorStop(1, 'fuchsia');
+			ctx.strokeStyle = grad;
+			ctx.lineWidth = radius*0.1;
+			ctx.stroke();
+			ctx.beginPath();
+			ctx.arc(0, 0, radius*0.1, 0, 2*Math.PI);
+			ctx.fillStyle = 'deeppink';
+			ctx.fill();
+		}
+		function drawNumbers(ctx, radius) {
+			var ang;
+			var num;
+			ctx.font = radius*0.15 + "px arial";
+			ctx.textBaseline="middle";
+			ctx.textAlign="center";
+			for(num = 1; num < 13; num++){
+				ang = num * Math.PI / 6;
+				ctx.rotate(ang);
+				ctx.translate(0, -radius*0.85);
+				ctx.rotate(-ang);
+				ctx.fillText(num.toString(), 0, 0);
+				ctx.rotate(ang);
+				ctx.translate(0, radius*0.85);
+				ctx.rotate(-ang);
+			}
+		}
+		function drawTime(ctx, radius){
+			var now = new Date();
+			var hour = now.getHours();
+			var minute = now.getMinutes();
+			var second = now.getSeconds();
+			hour=hour%12;
+			hour=(hour*Math.PI/6)+
+			(minute*Math.PI/(6*60))+
+			(second*Math.PI/(360*60));
+			drawHand(ctx, hour, radius*0.5, radius*0.07);
+			minute=(minute*Math.PI/30)+(second*Math.PI/(30*60));
+			drawHand(ctx, minute, radius*0.8, radius*0.07);
+			second=(second*Math.PI/30);
+			drawHand(ctx, second, radius*0.9, radius*0.02);
+		}
+		function drawHand(ctx, pos, length, width) {
+			ctx.beginPath();
+			ctx.lineWidth = width;
+			ctx.lineCap = "round";
+			ctx.moveTo(0,0);
+			ctx.rotate(pos);
+			ctx.lineTo(0, -length);
+			ctx.stroke();
+			ctx.rotate(-pos);
+		}
+	</script>
 </body>
 </html>
