--- a/W3 School/Formatting.html
+++ b/W3 School/Formatting.html
@@ -4,10 +4,11 @@
 		<meta charset="UTF-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="../Style/style.css">
+		<link rel="shortcut icon" href="../Face.jpg" type="image/x-icon">
 		<title>HTML Formatting</title>
 	</head>
 	<body>
-	HTML Formatting
+	<h1>HTML Formatting</h1>
 	<p><b>This text is bold</b></p>
 	<p><i>This text is italic</i></p>
 	<p>This is<sub> subscript</sub> and <sup>superscript</sup></p>
