--- a/W3 School/Home.html
+++ b/W3 School/Home.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>HTML Home</title>
+		<link rel="stylesheet" href="../Style/style.css">
+		<link rel="shortcut icon" href="../Face.jpg" type="image/x-icon">
 	</head>
 	<body>
 		<h1>This is a Heading</h1>
