--- a/Index.html
+++ b/Index.html
@@ -31,25 +31,26 @@
 			<th><a href="W3 School/Tables.html">HTML Tabulation</a></a></th>
 		</tr>
 		<tr>
-			<th><a href="W3 School/">HTML</a></a></th>
-			<th><a href="W3 School/">HTML</a></a></th>
+			<th><a href="W3 School/">HTML</a></th>
+			<th><a href="W3 School/">HTML</a></th>
 		</tr>
 		<tr>
-			<th><a href="W3 School/">HTML</a></a></th>
-			<th><a href="W3 School/">HTML</a></a></th>
+			<th><a href="W3 School/">HTML</a></th>
+			<th><a href="W3 School/">HTML</a></th>
 		</tr>
 		<tr>
-			<th><a href="W3 School/">HTML</a></a></th>
-			<th><a href="W3 School/">HTML</a></a></th>
+			<th><a href="W3 School/">HTML</a></th>
+			<th><a href="W3 School/">HTML</a></th>
 		</tr>
 		<tr>
-			<th><a href="W3 School/">HTML</a></a></th>
-			<th><a href="W3 School/">HTML</a></a></th>
+			<th><a href="W3 School/">HTML</a></th>
+			<th><a href="W3 School/">HTML</a></th>
 		</tr>
 		<tr>
-			<th><a href="W3 School/">HTML</a></a></th>
-			<th><a href="W3 School/">HTML</a></a></th>
+			<th><a href="W3 School/">HTML</a></th>
+			<th><a href="W3 School/">HTML</a></th>
 		</tr>
+		<a style="transform: translateY(1000);" href="Test.html">Easter Eggs</a>
 	</table>
 	<script>
 		var clock = document.getElementById("clock");
