--- a/New/Index.html
+++ b/New/Index.html
@@ -3,9 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="Style/Style.css">
 	<title>Project</title>
 </head>
 <body>
-	<h1>Git</h1>
+	<p class="typ-1 title">Git Help Docs</p>
+	<p class="typ-1 git-command">Git Setup System</p>
+	<div class="cnsl">
+		$ git config --global user.name "Your Name Comes Here"<br>
+		$ git config --global user.email you@yourdomain.example.com
+	</div>
 </body>
 </html>
