--- a/New/Index.html
+++ b/New/Index.html
@@ -4,14 +4,27 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="Style/Style.css">
+	<link rel="shortcut icon" href="Logo.png" type="image/x-icon">
 	<title>Project</title>
 </head>
 <body>
-	<p class="typ-1 title">Git Help Docs</p>
-	<p class="typ-1 git-command">Git Setup System</p>
+	<p class="typ-1 titl">Git Help Docs</p>
+	<p class="typ-1 git-command">Git Setup System</p><br>
+	<p class="typ-2 sb-titl">Configuring Your Git Account</p>
 	<div class="cnsl">
 		$ git config --global user.name "Your Name Comes Here"<br>
 		$ git config --global user.email you@yourdomain.example.com
+	</div>
+	<p class="typ-2 sb-titl">Importing a new project</p>
+	<div class="cnsl">
+		$ cd project <br>
+		$ git init
+	</div>
+	<div class="typ-3">
+		<div class="wrds">
+			You’ve now initialized the working directory ​you may notice a new directory created, named <span class="xrnl-cd">.git</span>
+			Next using <span class="xrnl-cd">git add .</span> to take a snapshot of the contents of all files under the current directory.
+		</div>
 	</div>
 </body>
 </html>
